AudioConduit is reporting RTP send statistics when it should be reporting RTP receive statistics
Categories
(Core :: WebRTC, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox65 | --- | wontfix |
| firefox66 | --- | fixed |
| firefox67 | --- | fixed |
People
(Reporter: ng, Assigned: ng)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
The AudioConduit is reporting RTP send statistics instead of receive statistics. We can use the new stats interface that landed with the import of libwebrtc v64.
| Assignee | ||
Comment 1•6 years ago
|
||
AudioConduit is reporting send instead of recv RTP stats
| Assignee | ||
Comment 2•6 years ago
|
||
This regression was introduced in bug 1376873.
Comment 4•6 years ago
|
||
| bugherder | ||
Comment 5•6 years ago
|
||
Is this something that should be considered for Beta backport or can it ride the trains?
| Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9043475 [details]
Bug 1527526 - AudioConduit is reporting send instead of recv RTP stats
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1376873
- User impact if declined: Call quality in WebRTC calls could suffer unbeknownst to the providing services.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It only changes the value statistics reported.
- String changes made/needed:
Comment 7•6 years ago
|
||
Comment on attachment 9043475 [details]
Bug 1527526 - AudioConduit is reporting send instead of recv RTP stats
OK for uplift to beta 12.
Comment 9•6 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Comment 10•6 years ago
|
||
Liz, yes it should be testable. I will work on a test procedure.
Comment 11•6 years ago
|
||
(In reply to Nico Grunbaum [:ng] from comment #6)
- Is this code covered by automated tests?: Yes
- Needs manual test from QE?: No
Setting this as qe-verify- per comment 6.
Description
•